neovim: some vim.depracated fixes + other misc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
 set-option -ga terminal-overrides ",xterm*:Tc:smcup@:rmcup@"
 set -g default-terminal "screen-256color"
 
-unbind C-b
-set-option -g prefix 'C-\'
-bind-key 'C-\' send-prefix
+# unbind C-b
+# set-option -g prefix 'C-\'
+# bind-key 'C-\' send-prefix
 
 set -g status-style 'bg=#4c3a45 fg=#d8cbc7'
 
